Add centre alignment

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <a href="#">This is an INLINE element</a>
     <span>Inline elements take up only as much width as necessary, and do not start on new lines</span>
     <code>Inline elements only have as much height and width as necessary, and these cannot be modified</code>
-
+    
+    <p>INLINE BLOCK elements have the best properties of both!</p>
     <img src="https://via.placeholder.com/350x150" alt="Placeholder image" height="50px" width="50px">
     <img src="https://via.placeholder.com/350x150" alt="Placeholder image" height="100px" width="100px">
     <img src="https://via.placeholder.com/350x150" alt="Placeholder image" height="200px" width="200px">
+    
+    <p>On center aligning elements...</p>
+    <h4>Try giving me a "margin: 0 auto", "width: 50%" and black border</h4>
 
     <header>
       <div class="placeholder">
